--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,197 @@
-.App {
+.app-container-side {
+  padding: 20px;
+  /* background-color: #8cf0ae; */
+  /* height: 3000px; */
+  display: inline-block;  
+}
+
+.app-container-main {
+  padding: 20px;
+  display: inline-block;  
+  min-height: 500px;
+}
+
+.item-button {
+  background-color: #ffffff;
+  border: none;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 24px;
+  width: 100%;
+}
+
+.item-button:hover {
+  background-color: #a8babb;
+}
+
+.item-button:focus {
+  background-color: #f3ea9a;
+}
+
+.custom-container {
+  background-color: #ffffff;
+  border: none;
+  width: 100%;
+  padding: 20px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+/*Styling for Note*/
+.note-container {
+  border: 1px;
+  border-radius: 8px;
+  border-style: solid;
+  width: 60%;
+  padding: 20px;
+  margin: 4px 2px;
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.note-info {
+  border: none;
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+.note-is-completed {
+  border: none;
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.note-title {
+  border: none;
+  display: inline-block;
+  width:100%;
+  min-height: 10px;
+}
+
+.note-title-completed {
+  border: none;
+  display: inline-block;
+  width:100%;
+  min-height: 10px;
+  text-decoration: line-through;
+}
+
+.note-remove {
+  border: none;
+  display: inline-block;
+}
+
+[class*="note-col-"] {
+  float: left;
+}
+
+.note-col-sm {width: 8.33%;}
+.note-col-lg {width: 75%;}
+
+.col-3 {width: 25%;}
+.col-9 {width: 75%;}
+
+.modal {
+  /*display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  display: block;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.modal-header-container {
+  width: 100%;
+  display: inline-block;
+}
+
+.modal-header-label {
+  width: 92%;
+  display: inline-block;
+}
+
+.span-button {
+  padding: 5px;
+  border-radius: 2px;
+  background-color: #e2e0e0;
+}
+
+.span-button:hover,
+.span-button:focus {
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 2px;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+
+.modal-close {
+  width: 8%;
+  display: inline-block;
+  float: right;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 2px;
+  background-color: #e2e0e0;
+}
+
+
+@media only screen and (max-width: 768px) {
+  /* [class="custom-container"] {
+    margin: 15%;
+  } */
+  [class="note-container"] {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+  [class="modal-close"] {
+    width: 20%;
+  }
+  [class="modal-header-label"] {
+    width: 80%;
   }
 }
+
+
+
+/* .note-title-completed- {
+  border: none;
+  display: inline-block;
+  width:100%;
+  min-height: 10px;
+  text-decoration: line-through;
+} */
+
+/* .note-title {
+  border: none;
+  display: inline-block;
+  overflow: auto;
+  border-color: transparent;
+  width:100%;
+  height:auto;
+  min-height: 10px;
+  line-height:1.5;
+  resize: both;
+  box-sizing:border-box;
+} */
